--- a/TCC/Views/DriverRegisterPage.xaml
+++ b/TCC/Views/DriverRegisterPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="TCC.Views.DriverRegisterPage"
              Title="Criar Conta"
              BackgroundColor="#F5F5F5">
@@ -33,7 +34,7 @@
             <!-- Nome -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Nome Completo" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="Digite seu nome completo" 
+                <Entry x:Name="NameEntry" Placeholder="Digite seu nome completo" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
@@ -43,29 +44,37 @@
             <!-- RG -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="RG" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="00.000.000-0" 
+                <Entry x:Name="RGEntry" Placeholder="00.000.000-0" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
                        Keyboard="Numeric"
-                       HeightRequest="45" />
+                       HeightRequest="45">
+                    <Entry.Behaviors>
+                        <toolkit:MaskedBehavior Mask="XX.XXX.XXX-X" />
+                    </Entry.Behaviors>
+                </Entry>
             </VerticalStackLayout>
 
             <!-- CPF -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="CPF" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="000.000.000-00" 
+                <Entry x:Name="CPFEntry" Placeholder="000.000.000-00" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
                        Keyboard="Numeric"
-                       HeightRequest="45" />
+                       HeightRequest="45">
+                    <Entry.Behaviors>
+                        <toolkit:MaskedBehavior Mask="XXX.XXX.XXX-XX" />
+                    </Entry.Behaviors>
+                </Entry>
             </VerticalStackLayout>
 
             <!-- Email -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Email" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="seu@email.com" 
+                <Entry x:Name="EmailEntry" Placeholder="seu@email.com" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
@@ -76,7 +85,8 @@
             <!-- Data de Nascimento -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Data de Nascimento" FontSize="14" TextColor="#333" />
-                <DatePicker BackgroundColor="White" 
+                <DatePicker x:Name="BirthDatePicker"
+                            BackgroundColor="White" 
                             TextColor="#333" 
                             FontSize="16"
                             HeightRequest="45" />
@@ -85,12 +95,16 @@
             <!-- Telefone -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Telefone" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="(11) 99999-9999" 
+                <Entry x:Name="PhoneEntry" Placeholder="(11) 99999-9999" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
                        Keyboard="Telephone"
-                       HeightRequest="45" />
+                       HeightRequest="45">
+                    <Entry.Behaviors>
+                        <toolkit:MaskedBehavior Mask="(XX) XXXXX-XXXX" />
+                    </Entry.Behaviors>
+                </Entry>
             </VerticalStackLayout>
 
             <!-- Contato de Emergência -->
@@ -102,7 +116,11 @@
                        BackgroundColor="White" 
                        TextColor="#333" 
                        Keyboard="Telephone"
-                       HeightRequest="45" />
+                       HeightRequest="45">
+                    <Entry.Behaviors>
+                        <toolkit:MaskedBehavior Mask="(XX) XXXXX-XXXX" />
+                    </Entry.Behaviors>
+                </Entry>
             </VerticalStackLayout>
 
             <!-- CNH -->
@@ -126,10 +144,10 @@
                     <HorizontalStackLayout VerticalOptions="Center">
                         <Ellipse Fill="White" Stroke="Black" StrokeThickness="1" WidthRequest="20" HeightRequest="20">
                             <Ellipse.GestureRecognizers>
-                                <TapGestureRecognizer />
+                                <TapGestureRecognizer Command="{Binding SelectMasculinoCommand}" />
                             </Ellipse.GestureRecognizers>
                         </Ellipse>
-                        <Ellipse x:Name="MasculinoPreenchido" Fill="Black" IsVisible="{Binding Source={x:Reference MasculinoRadio}, Path=IsChecked}"
+                        <Ellipse x:Name="MasculinoPreenchido" Fill="Black" IsVisible="{Binding MasculinoSelected}"
                                  WidthRequest="12" HeightRequest="12" HorizontalOptions="Center" VerticalOptions="Center"
                                  Margin="-16,0,0,0"/>
                         <Label Text="Masculino" Margin="5,0,0,0" VerticalOptions="Center"/>
@@ -139,10 +157,10 @@
                     <HorizontalStackLayout VerticalOptions="Center">
                         <Ellipse Fill="White" Stroke="Black" StrokeThickness="1" WidthRequest="20" HeightRequest="20">
                             <Ellipse.GestureRecognizers>
-                                <TapGestureRecognizer />
+                                <TapGestureRecognizer Command="{Binding SelectFemininoCommand}" />
                             </Ellipse.GestureRecognizers>
                         </Ellipse>
-                        <Ellipse x:Name="FemininoPreenchido" Fill="Black" IsVisible="{Binding Source={x:Reference FemininoRadio}, Path=IsChecked}"
+                        <Ellipse x:Name="FemininoPreenchido" Fill="Black" IsVisible="{Binding FemininoSelected}"
                                  WidthRequest="12" HeightRequest="12" HorizontalOptions="Center" VerticalOptions="Center"
                                  Margin="-16,0,0,0"/>
                         <Label Text="Feminino" Margin="5,0,0,0" VerticalOptions="Center"/>
@@ -157,7 +175,7 @@
             <!-- Endereço -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Endereço" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="Rua, número, bairro, cidade" 
+                <Entry x:Name="AddressEntry" Placeholder="Rua, número, bairro, cidade" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
@@ -167,7 +185,7 @@
             <!-- Senha -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Senha" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="Mínimo 8 caracteres" 
+                <Entry x:Name="PasswordEntry" Placeholder="Mínimo 8 caracteres" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
@@ -178,7 +196,7 @@
             <!-- Confirmar Senha -->
             <VerticalStackLayout Spacing="5">
                 <Label Text="Confirmar Senha" FontSize="14" TextColor="#333" />
-                <Entry Placeholder="Digite a senha novamente" 
+                <Entry x:Name="ConfirmPasswordEntry" Placeholder="Digite a senha novamente" 
                        FontSize="16" 
                        BackgroundColor="White" 
                        TextColor="#333" 
