--- a/TCC/Views/DriverRegisterPage.xaml
+++ b/TCC/Views/DriverRegisterPage.xaml
@@ -206,13 +206,15 @@
 
             <!-- Botão Criar Conta -->
             <Button Text="CRIAR CONTA" 
+                    x:Name="OnRegister"
                     BackgroundColor="#FF0000" 
                     TextColor="White" 
                     CornerRadius="8" 
                     HeightRequest="50" 
                     FontSize="16"
                     FontAttributes="Bold"
-                    Margin="0,20,0,10" />
+                    Margin="0,20,0,10"
+                    Clicked="OnRegister_Clicked"/>
 
             <!-- Botão Já tenho conta -->
             <Button Text="Já tenho uma conta" 
