--- a/TCC/Views/Index.xaml
+++ b/TCC/Views/Index.xaml
@@ -1,12 +1,21 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TCC.Views.Index"
-             Title="Index">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             x:Class="TCC.Views.Index">
+
+    <VerticalStackLayout Padding="20" Spacing="20">
+
+        <Label x:Name="WelcomeLabel"
+               Text="Bem-vindo!"
+               FontSize="24"
+               HorizontalOptions="Center"/>
+
+        <Button Text="Sair"
+                Clicked="OnLogoutClicked"
+                BackgroundColor="DarkRed"
+                TextColor="White"
+                CornerRadius="10"
+                Padding="10"
+                FontAttributes="Bold" />
+
     </VerticalStackLayout>
 </ContentPage>
